# superbench-assignment

./: .gitignore  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
backend/: Dockerfile  main.py
backend/scripts/: init_db.py
backend/src/apis/: __init__.py  agent.py  chat.py  health.py
backend/src/db/: database.py
backend/src/models/: models.py
backend/src/schemas/: schemas.py
backend/src/utils/: ai_agent.py  vector_db.py
frontend/: Dockerfile  demo.html  package.json  setup.sh  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx
